2004-02-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/magick_wand.c (MagickRemoveImageProfile): Use C comments in
	C files.
	* magick/constitute.c (MapQuantumType): Fix spurious comma in
	enum definition.
	* magick/blob.c (GetBlobStreamHandler): Apparently return type can
	not be const.

2004-02-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Check for Windows fonts under
	/usr/X11R6/lib/X11/fonts/truetype (XFree86 standard location?).
	* coders/jp2.c (WriteJP2Image): Support providing a compression
	rate value (range 0.0 to 1.0) using command line syntax similar to
	'-define jp2:rate=0.5'.  In Magick++ this option may be accessed
	similar to image.defineValue("jp2","rate","0.5");
	* magick/command.c (DisplayImageCommand): Exit status was inverted
	so 'gm display' was returning 1 for successful commands, and 0 for
	failures.
	(AnimateImageCommand): Exit status was inverted so 'gm animate'
	was returning 1 for successful commands, and 0 for failures.

2004-02-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.h (MagickReallocMemory): Solaris compiler
	complains about cast so remove it.
	* coders/xwd.c (WriteXWDImage): Right-size the pixels buffer and
	tune writer loops a bit.
	* magick/color.h (VerifyColormapIndex): Improve diagnostics.
	* coders/pict.c (WritePICTImage): Eliminate use of uninitialized
	data when writing RGB PICT. Fix OpenBlob assertion when writing
	JPEG PICT.	
	(ReadPICTImage): Validate 'tile_image' colormap indexes rather
	than 'image' colormap indexes. Preserve compression attribute from
	tile image.
	* magick/constitute.c (DispatchImage): Don't access image opacity
	channel unless image->matte is True.

2004-02-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/png.c (UnregisterPNGImage): Destroy PNG semaphore.
	* magick/image.c (SetImageInfo): Since we don't know what the
	"IMPLICIT" specifier is supposed to do, support for it is