@@ -56,6 +56,8 @@
 2004-02-10  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> coders/Makefile.am (label_la_LDFLAGS): Add a dependency on the
+        math library since floor() is used.
   <LI> wand/magick_wand.c (MagickRemoveImageProfile): Use C comments in
         C files.<BR>
   <LI> magick/constitute.c (MapQuantumType): Fix spurious comma in
