@@ -1,5 +1,7 @@
 2004-02-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* coders/Makefile.am (label_la_LDFLAGS): Add a dependency on the
+	math library since floor() is used.
 	* wand/magick_wand.c (MagickRemoveImageProfile): Use C comments in
 	C files.
 	* magick/constitute.c (MapQuantumType): Fix spurious comma in
